--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <section class="intro">
       <h2>Nossos valores</h2>
-      <h3>Confiança, Força, Informação, Equilíbrio, Resultado, Compromentimento e Atendimento Humanizado. </h3>
+      <h3>Confiança, Força, Informação, Equilíbrio, Resultado, Comprometimento e Atendimento Humanizado. </h3>
     </section>
     <section class="Atendimento">
         <h2>Advocacia Especializada</h2>
